log-20250401-202041.txt
=== Run started: Tue Apr  1 08:20:44 PM BST 2025 ===
The directory was updated with the latest changes.
Installing dependencies from requirements.txt...
WARNING: Skipping serial as it is not installed.
Defaulting to user installation because normal site-packages is not writeable
Looking in indexes: https://pypi.org/simple, https://www.piwheels.org/simple
Requirement already satisfied: chess==1.10.0 in /home/spiesznikrysiek/.local/lib/python3.11/site-packages (from -r requirements.txt (line 1)) (1.10.0)
Requirement already satisfied: colorzero==2.0 in /usr/lib/python3/dist-packages (from -r requirements.txt (line 2)) (2.0)
Requirement already satisfied: gpiozero==2.0.1 in /usr/lib/python3/dist-packages (from -r requirements.txt (line 3)) (2.0.1)
Requirement already satisfied: python-chess==1.999 in /home/spiesznikrysiek/.local/lib/python3.11/site-packages (from -r requirements.txt (line 4)) (1.999)
Requirement already satisfied: tk in /home/spiesznikrysiek/.local/lib/python3.11/site-packages (from -r requirements.txt (line 5)) (0.1.0)
Requirement already satisfied: pyserial in /usr/lib/python3/dist-packages (from -r requirements.txt (line 6)) (3.5)
Requirement already satisfied: numpy in /usr/lib/python3/dist-packages (from -r requirements.txt (line 7)) (1.24.2)
Config file written to: /root/.arduino15/arduino-cli.yaml
Downloading index: package_index.tar.bz2 0 B / 79.06 KiB [-------------]   0.00%Downloading index: package_index.tar.bz2 downloaded                             
Platform arduino:avr@1.8.6 already installed
Platform arduino:megaavr@1.8.8 already installed
Already installed LiquidCrystal_I2C_Hangul@2.0.0
Already installed AccelStepper@1.64.0
Already installed AccelStepper@1.64.0
Downloading AccelStepperWithDistances@1.0.4...
AccelStepperWithDistances@1.0.4 AccelStepperWithDistances@1.0.4 already downloaded
Installing AccelStepperWithDistances@1.0.4...
Installed AccelStepperWithDistances@1.0.4
WARNING: library LiquidCrystal_I2C_Hangul claims to run on avr architecture(s) and may be incompatible with your current board which runs on megaavr architecture(s).
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino: In function 'void setup()':
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:320:5: error: 'TCCR1A' was not declared in this scope
     TCCR1A = _BV(COM1A1) | _BV(WGM11);
     ^~~~~~
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:320:5: note: suggested alternative: 'TCB1'
     TCCR1A = _BV(COM1A1) | _BV(WGM11);
     ^~~~~~
     TCB1
In file included from /root/.arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino5/avr/include/avr/io.h:99:0,
                 from /root/.arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino5/avr/include/avr/pgmspace.h:90,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/String.h:31,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/IPAddress.h:24,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/ArduinoAPI.h:30,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/Arduino.h:23,
                 from /root/.cache/arduino/sketches/B49E3CB4AB8505550ED3FBABA5F12BB7/sketch/Arduino.ino.cpp:1:
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:320:18: error: 'COM1A1' was not declared in this scope
     TCCR1A = _BV(COM1A1) | _BV(WGM11);
                  ^
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:320:32: error: 'WGM11' was not declared in this scope
     TCCR1A = _BV(COM1A1) | _BV(WGM11);
                                ^
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:321:5: error: 'TCCR1B' was not declared in this scope
     TCCR1B = _BV(WGM13) | _BV(CS11);
     ^~~~~~
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:321:5: note: suggested alternative: 'TCB1'
     TCCR1B = _BV(WGM13) | _BV(CS11);
     ^~~~~~
     TCB1
In file included from /root/.arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino5/avr/include/avr/io.h:99:0,
                 from /root/.arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino5/avr/include/avr/pgmspace.h:90,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/String.h:31,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/IPAddress.h:24,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/api/ArduinoAPI.h:30,
                 from /root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/cores/arduino/Arduino.h:23,
                 from /root/.cache/arduino/sketches/B49E3CB4AB8505550ED3FBABA5F12BB7/sketch/Arduino.ino.cpp:1:
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:321:18: error: 'WGM13' was not declared in this scope
     TCCR1B = _BV(WGM13) | _BV(CS11);
                  ^
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:321:31: error: 'CS11' was not declared in this scope
     TCCR1B = _BV(WGM13) | _BV(CS11);
                               ^
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:321:31: note: suggested alternative: 'B111'
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:322:5: error: 'ICR1' was not declared in this scope
     ICR1 = 40000;  // 50Hz frequency (16MHz/8/50Hz)
     ^~~~
/home/spiesznikrysiek/Desktop/Chessbot/Chessbot_rasbpy/Arduino/Arduino.ino:322:5: note: suggested alternative: 'TCB1'
     ICR1 = 40000;  // 50Hz frequency (16MHz/8/50Hz)
     ^~~~
     TCB1


[92mUsed library[0m             [92mVersion[0m [90mPath[0m
[93mAccelStepper[0m             1.64    [90m/root/Arduino/libraries/AccelStepper[0m
[93mWire[0m                     1.0     [90m/root/.arduino15/packages/arduino/hardware/megaavr/1.8.8/libraries/Wire[0m
[93mLiquidCrystal_I2C_Hangul[0m 2.0.0   [90m/root/Arduino/libraries/LiquidCrystal_I2C_Hangul[0m

[92mUsed platform[0m   [92mVersion[0m [90mPath[0m
[93marduino:megaavr[0m 1.8.8   [90m/root/.arduino15/packages/arduino/hardware/megaavr/1.8.8[0m
Error during build: exit status 1
Compilation failed
=== Run completed: Tue Apr  1 08:50:39 PM BST 2025 ===
